WIP: translate text inside ecosystem into chinese (not yet korean)

--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -17,8 +17,10 @@
   },
   "intro-ecosystem": {
     "title": "MUZIKA 生态系统",
-    "subtitle-1": "Muzika 的核心主题概念就是建立一个自主独立与自我维持的生态系统，这主要来自内容创作者（音乐艺人）与粉丝们的贡献与互动。在区块链技术（2009年）诞生的前期，在比特币还未被发行之前，整个世界的音乐产业尚不具备可以推动其更高级进化的革命性技术。",
-    "subtitle-2": " 随着分布式数字化音乐生态系统概念的出现， 几乎让所有人都可以参与到音乐产业中音乐作品的投资，制作，发行与消费，Muzika就是为了实现这一革命性的目标而诞生的时代产物。"
+    "subtitle-1": "Muzika将建立起由音乐人与粉丝推动的独立自主与可持续自我维持的生态系统，系统将会按照用户参与音乐创造环节与对生态系统的贡献与积极参与的热度进行不同程度的经济性奖励。",
+    "subtitle-2": "首先，通过智能合约，数字音乐制品可以直接地从音乐人那里分配到粉丝手中，从而有效地保障了更加公平与透明的经济分配。",
+    "subtitle-3": "其次，粉丝可以获得诸多不同可以直接赞助音乐人的机遇，通过直接赞助，粉丝可以获得专有特权与直接利益的回报。",
+    "subtitle-4": "最后，粉丝可以通过参与多种多样的社区活动，获得忠实奖励积分，而这些积分可定期地转换成MZK代币。"
   },
   "intro-mzk-coins": {
     "subtitle-1": "作为新音乐生态系统中的重要组成部分，我们设计出了Muzika代币。我们的团队反复学习与研究迄今为止的各类数字代币成功与失败的案例，我们清晰地领悟到要做好区块链项目所必须的条件与因素。",
