--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -18,7 +18,9 @@
   "intro-ecosystem": {
     "title": "MUZIKA 생태계",
     "subtitle-1": "Muzika는 음악가들과 팬들이 주도하는 자생적이고 지속가능한 생태계를 창조할 것입니다. 2009년 비트코인과 함께 등장한 블록체인 기술을 토대로 우리는 음악 산업을 새롭게 변화시키고자 합니다. ",
-    "subtitle-2": "분산화된 디지털 음악 생태계는 누구나 음악의 생산, 소비, 그리고 분배에 이르기까지 음악 산업의 전 과정에 참여할 수 있게 할 것입니다. 그리고 이를 토대로 Muzika는 음악 산업에서 변혁을 이루어낼 것입니다.  "
+    "subtitle-2": "분산화된 디지털 음악 생태계는 누구나 음악의 생산, 소비, 그리고 분배에 이르기까지 음악 산업의 전 과정에 참여할 수 있게 할 것입니다. 그리고 이를 토대로 Muzika는 음악 산업에서 변혁을 이루어낼 것입니다.  ",
+    "subtitle-3": "Second, fans will have opportunities to make direct sponsorship to their favorite artists, supporting them and receiving exclusive benefits in return.",
+    "subtitle-4": "Third, fans will be rewarded with loyalty points for their various community activities, which will be regularly converted into MZK coins described in detail below. "
   },
   "intro-mzk-coins": {
     "subtitle-1": "Muzika 코인(MZK)은 새로운 Muzika 생태계에서 중추적인 역할을 담당할 것입니다. 우리는 과거와 현재의 수많은 가상화폐들의 성공과 실패 사례들을 분석하였고, 프로젝트를 성공으로 이끌기 위한 요소들에 대해 뚜렷한 시각을 얻을 수 있었습니다.",
