--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -14,17 +14,43 @@
     "team": "팀",
     "advisors": "어드바이저",
     "roadmap": "로드맵",
-    "services": "서비스"
+    "services": "서비스",
+    "bounty": "에어드롭",
+    "business": "비지니스",
+    "token-metrics": "Token Metrics"
+  },
+  "intro-business-idea": {
+    "title-1": "THE CHALLENGE",
+    "subtitle-1": "Musicians and fans are the real value creators in today’s music industry,\nbut they are not properly rewarded for their value creation.",
+    "challenge-item-1": "Musicians are starving. Everyone listens to music, more people pay for music, but artists are still not making money.",
+    "challenge-item-2": "On the other end, fans (that’s us) are still pigeonholed as consumers, though we are the ones who actually make super-stars! We devote our time and effort to vote, make cover songs, go viral, and even write fictions for our favorite artists, but no one rewards our effort and devotion.",
+    "challenge-item-3": "In contrast, intermediaries – distributors and platforms – are making excessive profit for one time and unsophisticated tasks of 'transferring' the ready-made values.",
+    "subtitle-2": "Muzika will bring innovation to the value chain in digital music industry",
+    "solution-desc": "We will reform how value is created and captured by various players within the industry. We will return rewards to those who create the value, from those who merely transfer the value, while recovering the share lost from digital piracy through blockchain technology.",
+    "title-2": "WHAT MAKES US DIFFERENT",
+    "different-1-short": "Previous attempts",
+    "different-1-long": "Previous music projects have been slow in progress because they focused too much on Smart Contract transaction itself, while overlooking the importance of fans and userbase. They proved it possible to give more percentage to artists. Unfortunately, for musicians, 10% of $10,000 from iTunes was better than 90% of $10 from a Smart Contract transaction without sufficient userbase.",
+    "different-2-short": "Muzika will create a new economy",
+    "different-2-long": "In order to provide musicians 90% of $10,000, we need to create a new form of economy – an autonomous, self-sustaining ecosystem driven by artists and their fans in tandem. To create a new form of economy, we need fans – mass userbase that will create network effect and grow up with Muzika. We will reward fans for their value created, which will make an incentivized community. The incentivized community will create the network effect, allowing us to provide artists 90% of $10,000 or even more.",
+    "different-3-short": "We precisely know how to do it",
+    "different-3-long": "Creating a new economy requires a unique set of courage and mindset. In 2015, co-founders of Muzika saw opportunities in online instrumental music industry and started their venture – Mapiacompany. After 3 years, Mapiacompany now stands as the No.1 global instrumental music platform with more than 2,000,000 users"
   },
   "intro-press": {
     "description": "전 세계 미디어에 소개된\nMuzika의 이야기를 확인해보세요."
   },
   "intro-ecosystem": {
-    "title": "MUZIKA 생태계",
-    "subtitle-1": "뮤지카는 아티스트와 팬들이 주도하는 자생적 음악 생태계를 창조할 것입니다. 이를 통해 디지털 음악 산업의 경제적 분배 구조를 개선하고, 창작물에 대한 보상이 창작 과정, 그리고 그 바탕이 되는 커뮤니티에 대한 노력과 헌신에 비례할 수 있도록 토큰 경제 구조를 만들어갈 것입니다. ",
-    "subtitle-2": "첫째, 스마트 컨트랙트를 통해 아티스트는 직접, 그리고 보다 투명하게 팬들에게 디지털 음악 상품을 판매하여 자신의 노력에 대한 정당한 대가를 지급받을 수 있게 됩니다. ",
-    "subtitle-3": "둘째, 팬들은 뮤지카 생태계를 통해 아티스트들에게 직접 후원을 할 수 있게 되며, 아티스트들은 후원자들만을 위한 상품과 서비스를 제공하여 이에 보답할 것입니다.",
-    "subtitle-4": "셋째, 팬들은 다양한 커뮤니티 활동에 대해 Loyalty Point로 보상받고, 이 Loyalty Point를 MZK 토큰으로 전환하여 디지털 음악 상품을 구매하거나 아티스트를 후원하는 등 다양한 활동에 사용할 수 있게 됩니다. "
+    "title": "THE MUZIKA ECOSYSTEM",
+    "subtitle-1": "Muzika will create an autonomous, self-sustaining ecosystem driven by artists and their fans in tandem, where compensations and rewards will become proportional to the level of devotion put into musical creations and ecosystem behind them.",
+    "subtitle-2": "First, smart contract will allow digital musical products to be transferred directly from artists to fans, ensuring fairer and more transparent economic distribution.",
+    "subtitle-3": "Second, fans will be rewarded with loyalty points for their various community activities, which will be regularly converted into MZK coins - the sole medium of exchange for all economic activities in the ecosystem.",
+    "subtitle-4": "Third, fans will have opportunities to make direct sponsorship to their favorite artists, supporting them and receiving exclusive benefits in return."
+  },
+  "intro-token-metrics": {
+    "title": "TOKEN METRICS",
+    "num-of-tokens": "Total number of tokens",
+    "percent-for-sale": "% for sale",
+    "num-of-tokens-for-sale": "Total number of tokens for sale",
+    "hardcap": "Hard-cap"
   },
   "intro-mzk-coins": {
     "subtitle-1": "Muzika 코인(MZK)은 새로운 Muzika 생태계에서 중추적인 역할을 담당할 것입니다. 우리는 과거와 현재의 수많은 가상화폐들의 성공과 실패 사례들을 분석하였고, 프로젝트를 성공으로 이끌기 위한 요소들에 대해 뚜렷한 시각을 얻을 수 있었습니다.",
@@ -50,7 +76,7 @@
     "awards": "수상 경력"
   },
   "intro-business": {
-    "subtitle": "Global No. 1 Instrumental Music Platform ",
+    "subtitle": "Global No. 1\nInstrumental Music Platform ",
     "year-of-exp": "년의 경험",
     "user-nations": "서비스되는 국가의 수",
     "users": "사용자",
@@ -64,7 +90,8 @@
     "subtitle": "음악 시장에서의 혁신은 이제 시작입니다"
   },
   "intro-footer": {
-    "whitepapers": "백서",
+    "business": "Business",
+    "ecosystem": "Ecosystem",
     "advisors": "어드바이저",
     "teams": "팀",
     "roadmap": "로드맵",
@@ -77,7 +104,12 @@
     "telegram-zh": "Telegram (CHN)",
     "telegram-kr": "Telegram (KOR)",
 
-    "websites": "웹사이트"
+    "websites": "웹사이트",
+    "bounty": "에어드롭",
+
+    "project": "프로젝트",
+    "whitepaper": "백서",
+    "project-teaser": "프로젝트 티저"
   },
   "airdrop": {
     "my-wallet": "내 지갑",
