--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -7,7 +7,7 @@
     "airdrop-btn-text": "赏金计划"
   },
   "intro-navbar": {
-    "press": "Press",
+    "press": "媒体报道",
     "ecosystem": "生态系统",
     "mzk-coins": "MZK代币",
     "partners": "合作方",
@@ -16,40 +16,40 @@
     "roadmap": "路线图",
     "services": "应用场景",
     "bounty": "赏金计划",
-    "business": "Business",
+    "business": "商业模式",
     "token-metrics": "Token Metrics"
   },
   "intro-business-idea": {
-    "title-1": "THE CHALLENGE",
-    "subtitle-1": "Musicians and fans are the real value creators in today’s music industry,\nbut they are not properly rewarded for their value creation.",
-    "challenge-item-1": "Musicians are starving. Everyone listens to music, more people pay for music, but artists are still not making money.",
-    "challenge-item-2": "On the other end, fans (that’s us) are still pigeonholed as consumers, though we are the ones who actually make super-stars! We devote our time and effort to vote, make cover songs, go viral, and even write fictions for our favorite artists, but no one rewards our effort and devotion.",
-    "challenge-item-3": "In contrast, intermediaries – distributors and platforms – are making excessive profit for one time and unsophisticated tasks of 'transferring' the ready-made values.",
-    "subtitle-2": "Muzika will bring innovation to the value chain in digital music industry",
-    "solution-desc": "We will reform how value is created and captured by various players within the industry. We will return rewards to those who create the value, from those who merely transfer the value, while recovering the share lost from digital piracy through blockchain technology.",
-    "title-2": "WHAT MAKES US DIFFERENT",
-    "different-1-short": "Previous attempts",
-    "different-1-long": "Previous music projects have been slow in progress because they focused too much on Smart Contract transaction itself, while overlooking the importance of fans and userbase. They proved it possible to give more percentage to artists. Unfortunately, for musicians, 10% of $10,000 from iTunes was better than 90% of $10 from a Smart Contract transaction without sufficient userbase.",
-    "different-2-short": "Muzika will create a new economy",
-    "different-2-long": "In order to provide musicians 90% of $10,000, we need to create a new form of economy – an autonomous, self-sustaining ecosystem driven by artists and their fans in tandem. To create a new form of economy, we need fans – mass userbase that will create network effect and grow up with Muzika. We will reward fans for their value created, which will make an incentivized community. The incentivized community will create the network effect, allowing us to provide artists 90% of $10,000 or even more.",
-    "different-3-short": "We precisely know how to do it",
-    "different-3-long": "Creating a new economy requires a unique set of courage and mindset. In 2015, co-founders of Muzika saw opportunities in online instrumental music industry and started their venture – Mapiacompany. After 3 years, Mapiacompany now stands as the No.1 global instrumental music platform with more than 2,000,000 users"
+    "title-1": "产业挑战",
+    "subtitle-1": "音乐艺人与音乐粉丝是当今音乐产业中真正的价值缔造者，\n但是，他们的贡献却从未得到过应有的回报。",
+    "challenge-item-1": "音乐艺人被拮据的生活所困，人人都在聆听音乐，越来越多的人也开始为音乐而消费，为何音乐艺人却迟迟看不到回报？",
+    "challenge-item-2": "音乐粉丝成就了超级巨星，然后，他们却被单一地冠上了“消费者”的名衔。音乐粉丝们付出了自己的时间与精力为偶像想尽办法大造声势，当音乐艺人功成名就的时候，他们却一无所获。",
+    "challenge-item-3": "音乐产业链内的中间商（发行商与音乐平台）正享受着简易的“转移输送”任务而带来的长期持久的丰厚回报。",
+    "subtitle-2": "Muzika将创新引入数字音乐产业中的价值链",
+    "solution-desc": "我们将改革与升级音乐产业中的价值创造与分配，在把奖励与回报从“转移”价值者（中间商）那里回馈到真正创造价值者手中的同时，通过区块链技术恢复原先因数字盗版等问题而产生的产业损失。",
+    "title-2": "Muzika的与总不同之处",
+    "different-1-short": "先前的类似尝试",
+    "different-1-long": "早先其它类似项目的进度都颇为缓慢，它们过多地将精力集中在智能合约上，却忽略了音乐粉丝与基础用户量的重要性。虽验证了通过区块链技术能将更多比率的利润回馈给音乐艺人的可行性。但遗憾的是，对音乐艺人来说，通过iTunes得到10,000美元中10%的回报要远比通过缺少足够用户量的智能合约交易而得到10美元中的90%要好得多。",
+    "different-2-short": "Muzika创建新的经济生态",
+    "different-2-long": "为了实现将10,000美元中的90%回馈给音乐艺人，我们需要创建新的经济生态 --- 一个由音乐艺人与粉丝推动的独立自主与可持续自我维持的经济生态。实现这一目标，我们需要音乐粉丝 --- 可引发“网络效应”与Muzika共同发展的基础用户量。用户在我们的平台上创造价值的时候，他们会得到相应的奖励，以此建立起具备奖励机制的社区，进而吸引更多的参与者，从而最终引发“网络效应”，以便有助我们实现将10,000美元中的90%回馈给音乐艺人的愿景。",
+    "different-3-short": "对音乐社区了如指掌",
+    "different-3-long": "创建新的经济生态需兼备独特的勇气与智慧。早在2015年，Muzika的三位联合创始人就发现了在线网络乐器音乐产业的商机，从而创建了Mapiacompany。三年后，Mapiacompany现已成为拥有200万用户量全球排名第一的在线网络乐器音乐平台。"
   },
   "intro-press": {
     "description": "Muzika受到全球诸多知名媒体的关注，\n颇具代表性的相关媒体报道如下："
   },
   "intro-ecosystem": {
-    "title": "THE MUZIKA ECOSYSTEM",
-    "subtitle-1": "Muzika will create an autonomous, self-sustaining ecosystem driven by artists and their fans in tandem, where compensations and rewards will become proportional to the level of devotion put into musical creations and ecosystem behind them.",
-    "subtitle-2": "First, smart contract will allow digital musical products to be transferred directly from artists to fans, ensuring fairer and more transparent economic distribution.",
-    "subtitle-3": "Second, fans will be rewarded with loyalty points for their various community activities, which will be regularly converted into MZK coins - the sole medium of exchange for all economic activities in the ecosystem.",
-    "subtitle-4": "Third, fans will have opportunities to make direct sponsorship to their favorite artists, supporting them and receiving exclusive benefits in return."
+    "title": "Muzika 生态经济",
+    "subtitle-1": "Muzika将建立起由音乐艺人与粉丝推动的独立自主与可持续自我维持的生态经济，系统将会按照用户参与音乐创造环节与对生态系统的贡献与积极参与的热度进行不同程度的经济性奖励。",
+    "subtitle-2": "首先，通过智能合约，数字音乐制品可以从音乐艺人那里直接传递到粉丝手中，从而有效地保障了更加公平与透明的经济分配。",
+    "subtitle-3": "其次，音乐粉丝们通过参与各类的社区活动获得忠实积分（LP），LP积分可定期转换成唯一可在Muzika生态经济系统内进行交易的MZK代币。",
+    "subtitle-4": "最后，音乐粉丝可获得各种直接赞助音乐艺人的机会，收获更多的专有特权与回报。"
   },
   "intro-token-metrics": {
-    "title": "TOKEN METRICS",
-    "num-of-tokens": "Total number of tokens",
+    "title": "代币分配图",
+    "num-of-tokens": "总发行量",
     "percent-for-sale": "% for sale",
-    "num-of-tokens-for-sale": "Total number of tokens for sale",
+    "num-of-tokens-for-sale": "预售总量",
     "hardcap": "Hard-cap"
   },
   "intro-mzk-coins": {
