fix(intro): modify description about muzika in header

--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "intro-main": {
-    "home-subtitle-1": "Redemption of the Music World",
-    "home-subtitle-2": "Blockchain integrated into Digital Music",
+    "home-subtitle-1": "Transforming the Music World through Blockchain",
+    "home-subtitle-2": "Closing the Gap Between Music Artists and Listeners",
     "project-teaser": "Project Teaser",
     "whitepaper": "Whitepaper",
     "airdrop-btn-text": "Bounty Program"
