feat(intro): create faq page

--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -17,7 +17,8 @@
     "services": "Services",
     "bounty": "Bounty",
     "business": "Business",
-    "token-metrics": "Token Metrics"
+    "token-metrics": "Token Metrics",
+    "faq": "FAQ"
   },
   "intro-business-idea": {
     "title-1": "THE CHALLENGE",
