--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -17,7 +17,8 @@
     "services": "서비스",
     "bounty": "에어드롭",
     "business": "비지니스",
-    "token-metrics": "Token Metrics"
+    "token-metrics": "Token Metrics",
+    "faq": "FAQ"
   },
   "intro-business-idea": {
     "title-1": "THE CHALLENGE",
