--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -17,7 +17,8 @@
     "services": "应用场景",
     "bounty": "赏金计划",
     "business": "商业模式",
-    "token-metrics": "Token Metrics"
+    "token-metrics": "Token Metrics",
+    "faq": "FAQ"
   },
   "intro-business-idea": {
     "title-1": "产业挑战",
