feat(intro): translate into Chinese

--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -80,6 +80,7 @@
     "awards": "Awards"
   },
   "intro-business": {
+    "title": "WE ARE NOT STARTING FROM SCRATCH",
     "subtitle": "Global No. 1 Instrumental Music Platform ",
     "year-of-exp": "Years of experience",
     "user-nations": "User nations",
