--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -80,6 +80,7 @@
     "awards": "수상 경력"
   },
   "intro-business": {
+    "title": "WE ARE NOT STARTING FROM SCRATCH",
     "subtitle": "Global No. 1\nInstrumental Music Platform ",
     "year-of-exp": "년의 경험",
     "user-nations": "서비스되는 국가의 수",
