--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -1,7 +1,7 @@
 {
   "intro-main": {
-    "home-subtitle-1": "分布式区块链基础生态系统",
-    "home-subtitle-2": "数字音乐世界的革命与未来",
+    "home-subtitle-1": "以区块链技术革新音乐世界",
+    "home-subtitle-2": "拉近音乐艺人与粉丝间的距离",
     "project-teaser": "项目简报",
     "whitepaper": "白皮书",
     "airdrop-btn-text": "赏金计划"
@@ -29,25 +29,25 @@
     "subtitle-2": "Muzika将创新引入数字音乐产业中的价值链",
     "solution-desc": "我们将改革与升级音乐产业中的价值创造与分配，在把奖励与回报从“转移”价值者（中间商）那里回馈到真正创造价值者手中的同时，通过区块链技术恢复原先因数字盗版等问题而产生的产业损失。",
     "title-2": "Muzika的与总不同之处",
-    "different-1-short": "先前的类似尝试",
-    "different-1-long": "早先其它类似项目的进度都颇为缓慢，它们过多地将精力集中在智能合约上，却忽略了音乐粉丝与基础用户量的重要性。虽验证了通过区块链技术能将更多比率的利润回馈给音乐艺人的可行性。但遗憾的是，对音乐艺人来说，通过iTunes得到10,000美元中10%的回报要远比通过缺少足够用户量的智能合约交易而得到10美元中的90%要好得多。",
-    "different-1-image-caption": "higher commission rate with smaller userbase\nvs lower commission rate with bigger user base",
-    "different-2-short": "Muzika创建新的经济生态",
-    "different-2-long": "为了实现将10,000美元中的90%回馈给音乐艺人，我们需要创建新的经济生态 --- 一个由音乐艺人与粉丝推动的独立自主与可持续自我维持的经济生态。实现这一目标，我们需要音乐粉丝 --- 可引发“网络效应”与Muzika共同发展的基础用户量。用户在我们的平台上创造价值的时候，他们会得到相应的奖励，以此建立起具备奖励机制的社区，进而吸引更多的参与者，从而最终引发“网络效应”，以便有助我们实现将10,000美元中的90%回馈给音乐艺人的愿景。",
-    "different-2-image-caption": "Profit Distribution to Artists in Muzika",
-    "different-3-short": "对音乐社区了如指掌",
-    "different-3-long": "创建新的经济生态需兼备独特的勇气与智慧。早在2015年，Muzika的三位联合创始人就发现了在线网络乐器音乐产业的商机，从而创建了Mapiacompany。三年后，Mapiacompany现已成为拥有200万用户量全球排名第一的在线网络乐器音乐平台。",
-    "different-3-image-caption": "Incentivized Community Dynamics"
+    "different-1-short": "先前类似尝试无法保证足够大的基础用户基数",
+    "different-1-long": "之前类似的音乐区块链项目忽略了基础用户量在大规模应用普及中的重要性，虽验证了通过智能合约等技术能将更多比率的利润回馈给音乐艺人的可行性，但对音乐艺人而言，从传统音乐流媒体渠道得到的低佣金率要远比使用智能合约的高佣金率更诱人，举个例子来说，通过iTunes得到1,000美元中10%的回报要远比通过缺少足够用户量的智能合约交易而得到1美元中的90%要好得多。",
+    "different-1-image-caption": "小基础用户基数平台的高佣金率 V.S. 大基础用户基数平台的低佣金率",
+    "different-2-short": "Muzika将创建新的经济生态来奖励激发用户",
+    "different-2-long": "Muzika的夙愿是为音乐艺人提供最好的条件：奖励优秀音乐作品的高额佣金 & 强有力的基础用户基数。Muzika已经开发了相当完善与经实践检验过的用户奖励机制，以实现激发音乐粉丝对Muzika生态社区的参与，这些奖励机制将有助于建立起Muzika平台需要的基础用户基数，实现不仅可以让音乐艺人获得高额的回报，同时，还能建立起像传统音乐流媒体平台那样的庞大用户基数。庞大用户基数所引发的“网络效应”是建立独立自主与可持续自我维持经济生态的关键。换句话说，Muzika能为音乐艺人提供甚至可高达90%的收益率。",
+    "different-2-image-caption": "Muzika经济生态中音乐艺人的收益率",
+    "different-3-short": "厚积薄发",
+    "different-3-long": "Muzika团队早已在解决数字音乐产业低效率领域可持续方案的开发中取得了惊人的硕果，早在2015年，Muzika的三位联合创始人就发现了在线网络乐器音乐产业的商机，创建了在线钢琴社区平台公司Mapiacompany。在短短三年的时间，Mapiacompany现已成为拥有200万用户量和社区的全球排名第一的网络乐器音乐平台。",
+    "different-3-image-caption": "奖励机制下的社区动态图"
   },
   "intro-press": {
     "description": "Muzika受到全球诸多知名媒体的关注，\n颇具代表性的相关媒体报道如下："
   },
   "intro-ecosystem": {
     "title": "Muzika 生态经济",
-    "subtitle-1": "Muzika将建立起由音乐艺人与粉丝推动的独立自主与可持续自我维持的生态经济，系统将会按照用户参与音乐创造环节与对生态系统的贡献与积极参与的热度进行不同程度的经济性奖励。",
-    "subtitle-2": "首先，通过智能合约，数字音乐制品可以从音乐艺人那里直接传递到粉丝手中，从而有效地保障了更加公平与透明的经济分配。",
-    "subtitle-3": "其次，音乐粉丝们通过参与各类的社区活动获得忠实积分（LP），LP积分可定期转换成唯一可在Muzika生态经济系统内进行交易的MZK代币。",
-    "subtitle-4": "最后，音乐粉丝可获得各种直接赞助音乐艺人的机会，收获更多的专有特权与回报。"
+    "subtitle-1": "Muzika将创建由音乐艺人与粉丝推动的独立自主与可持续自我维持的生态经济，系统将会按照用户参与音乐制作过程与对生态系统的贡献与积极参与的热度进行不同程度的奖励。",
+    "subtitle-2": "通过智能合约，数字音乐制品可从音乐艺人手中直接传递给粉丝，从而有效地保障了更加公平与透明的经济分配。",
+    "subtitle-3": "音乐粉丝通过参与各类的社区活动获得忠实度积分（LP），LP积分可定期转换成唯一可在Muzika生态经济系统内进行交易的MZK代币。",
+    "subtitle-4": "音乐粉丝可享有各类直接赞助音乐艺人的机会，收获更多的专有特权与回报"
   },
   "intro-token-metrics": {
     "title": "代币分配图",
@@ -80,7 +80,8 @@
     "awards": "殊荣奖项"
   },
   "intro-business": {
-    "subtitle": "全球第一的乐器音乐平台 ",
+    "title": "我们并非“菜鸟”",
+    "subtitle": "全球NO.1乐器音乐平台",
     "year-of-exp": "项目运营经验（年）",
     "user-nations": "用户所在国家",
     "users": "用户",
