--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -29,13 +29,13 @@
     "subtitle-2": "Muzika will bring innovation to the value chain in digital music industry",
     "solution-desc": "We will reform how value is created and captured by various players within the industry. We will return rewards to those who create the value, from those who merely transfer the value, while recovering the share lost from digital piracy through blockchain technology.",
     "title-2": "WHAT MAKES US DIFFERENT",
-    "different-1-short": "Previous attempts failed to secure large userbase",
+    "different-1-short": "Previous Attempts Failed to Secure Large Userbase",
     "different-1-long": "Previous music blockchain projects have overlooked the importance of a large userbase to achieve widescale adoption. These projects have demonstrated that it is possible to give a higher commission rate to artists for their work using Smart Contract transactions. However, for artists, the low commission rate offered from traditional music streaming apps that had huge userbases were more attractive than blockchain apps using Smart Contract transactions. Case in point, a 10% commission of $1,000 from iTunes was preferable to 90% commission of $1 from a Smart Contract transaction.",
     "different-1-image-caption": "Higher commission rate with smaller userbase\nvs Lower commission rate with bigger user base",
-    "different-2-short": "Muzika will create a new economy to incentivize the users",
+    "different-2-short": "Muzika Will Create A New Economy To Incentivize The Users",
     "different-2-long": "Muzika aims to provide musicians the best of both worlds: a higher commission rate for their creative content and a strong userbase. Muzika has developed a strong system for incentivizing fans to contribute to the Muzika ecosystem. These incentives will build the userbase necessary for Muzika to provide both higher commissions to artists along with the mass userbase of traditional music streaming sites. The network effect from a mass userbase will be the key to developing an autonomous, self-sustaining ecosystem. In other words, Muzika can provide musicians with 90% of $1,000.",
     "different-2-image-caption": "Profit Distribution to Artists in Muzika",
-    "different-3-short": "We have done it before",
+    "different-3-short": "We Have Done It Before",
     "different-3-long": "Muzika has already made significant achievements towards the development of sustainable solution to inefficiencies in the digital music industry. In 2015, co-founders of Muzika saw an opportunity in the online instrumental music industry and started online instrumental music platform Mapiacompany. In just over 3 years, Mapiacompany has become the #1 global instrumental music platform with over 2 million users. Muzika will build upon this existing userbase and community.",
     "different-3-image-caption": "Incentivized Community Dynamics"
   },
